<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<TextView  
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:layout_marginTop="10dp"
		android:textSize="18sp"
		android:text="@string/prompt" />
		
	<TextView  
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:layout_marginTop="10dp"
		android:textSize="18sp"
		android:text="@string/fileName" />			
	<EditText android:id="@+id/etFileName" 
		android:layout_width="match_parent" 
		android:layout_height="wrap_content" />
	
		
	<TextView 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:layout_marginTop="10dp"
		android:textSize="18sp"
		android:text="@string/isAutoFocus" />
	<RadioGroup
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<RadioButton android:id="@+id/rbYes"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:checked="true"
		    android:text="@string/yes" />
		<RadioButton android:id="@+id/rbNo"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/no" />
	</RadioGroup> 

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:layout_marginTop="10dp"
		android:textSize="18sp"
		android:text="@string/secAutoShoot" />
	<EditText android:id="@+id/etSecAutoShoot" 
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="number" />
	
	<LinearLayout 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:layout_marginTop="10dp" >
		<Button android:id="@+id/btnSave" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/prefSave" />
		<Button android:id="@+id/btnLoad" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/prefLoad" />
		<Button android:id="@+id/btnDefault" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/defaultValue" />
	</LinearLayout>
	
</LinearLayout>
